<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">La Biblio</string>
    <string name="action_exit">Exit</string>
    <string name="Button1">Rechercher un livre</string>
    <string name="Button2">Top Livres</string>
    <string name="instructions">Entrer nom livre </string>
    <string name="button_text">Rechercher</string>
    <string name="input_hint">Titre du livre</string>
    <string name="no_search_term">Entrer un nom</string>
    <string name="no_network">Verifier votre connexion</string>
    <string name="no_results">Aucun résultat trouvé</string>
    <string name="refresh">Rafraichir</string>
    <string name="home">Home</string>
    <string name="title">Titre :</string>
    <string name="description">Description :</string>
    <string name="sett_reminder_header">Set Reminder</string>
    <string name="sett_reminder_label">Remind Me</string>
    <string name="sett_reminder_desc">We will remind you to use La Biblio</string>
    <string name="sett_reminder_time_label">Set Reminder Time</string>
    <string name="sett_reminder_time_content">8 : 00 PM</string>
    <string name="settings">Paramètres</string>

</resources>