<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/exit"
        android:title="@string/action_exit"
        app:showAsAction="never"
        app:actionViewClass="android.widget.SearchView"
        />

    <item
        android:id="@+id/home"
        android:title="@string/home"
        app:showAsAction="always"
        android:icon="@drawable/baselinehomeblack"
        />


    <item
        android:id="@+id/refresh"
        android:title="@string/refresh"
        app:showAsAction="always"
        android:icon="@drawable/baselineupdateblack"
        />

</menu>