<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/instructions"
        android:text="@string/instructions"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bookInput"
        android:inputType="text"
        android:hint="@string/input_hint"
        android:layout_below="@id/instructions"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/searchButton"
        android:text="@string/button_text"
        android:onClick="searchBooks"
        android:layout_below="@id/bookInput"
        android:layout_alignParentRight="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_below="@id/searchButton"
        android:id="@+id/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titleText"
        android:layout_below="@id/title"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_below="@id/titleText"
        android:id="@+id/description"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/authorText"
        android:layout_below="@id/description"
        />

</RelativeLayout>