<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/backgroundlibrary"
    >
    <data>
        <variable name="viewModel"
            type="com.example.micka.projetandroidstudio.MainViewModel"></variable>
    </data>

    <RelativeLayout
        tools:context=".MainActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hautpage"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textSize="50sp"
            android:id="@+id/Titre"
            android:textColor="#ffffff"
            android:layout_below="@id/hautpage"
            android:background="#41000000"
            />

        <Button
            android:onClick="@{() -> viewModel.onActivity2()}"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/Button1"
            android:id="@+id/Button1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:id="@+id/Milieu"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/Button1"
            android:id="@+id/separateur"
            />

        <Button
            android:onClick="@{() ->viewModel.onActivity3()}"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:id="@+id/Button2"
            android:text="@string/Button2"
            android:layout_below="@id/separateur"
            android:layout_centerHorizontal="true"
            />

    </RelativeLayout>
</layout>